--- a/L4DStats/.project
+++ b/L4DStats/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>L4DStats</name>
+	<name>L4DPerspective</name>
 	<comment></comment>
 	<projects>
 	</projects>
